# video-generation

./: README.md  pyproject.toml
slurm/: segnet_train.slurm  transformer_predict.slurm  transformer_train.slurm
video_generation/datasets/: segnet_dataset.py  transformer_dataset.py
video_generation/models/: segnet.py  transformer.py
video_generation/scripts/: segnet.py  transformer.py  utils.py
